# tasks_api

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: fastapi.yml
api/: auth.py  db.py  middleware.py  models.py  routers.py  schemas.py  utils.py
api/models/: __init__.py  schemas.py  signups.py  users.py
api/services/: __init__.py
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: config.py  db.py
backend/app/api/: __init__.py  deps.py  index.py  signups.py  tasks.py  users.py
backend/app/models/: __init__.py  base.py  tasks.py  users.py
backend/app/schemas/: __init__.py  tasks.py
backend/app/services/: __init__.py  execution_tasks.py  scheduler.py  utils.py
backend/tests/: conftest.py  locustfile.py  test_api.py
tests/: conftest.py  locustfile.py  test_api.py
