[tool.poetry]
name = "signup_api"
version = "0.1.0"
description = "An asynchronous Fast API service for signups and Telegram integration"
authors = ["mbrav <mbrav@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = "*"
SQLAlchemy = "*"
PyMySQL = "*"
python-dotenv = "*"
aiogram = "*"


[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
autopep8 = "*"
requests = "*"

[tool.pytest.ini_options]
minversion = "6.2"
testpaths = [
    "tests/",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
addopts = "-vv -p no:cacheprovider"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
