[tool.poetry]
name = "tasks_api"
version = "0.1.4"
description = "An asynchronous Fast API service for tasks"
authors = ["mbrav <mbrav@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.9.1"}
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.32"
asyncpg = "^0.25.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.5"
httpx = {extras = ["http2"], version = "^0.22.0"}
APScheduler = "^3.9.1"
transliterate = "^1.10.2"


[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
